Fix filters modal width in tablets
Otherwise it's too small

--- a/assets/src/scss/pages/search/_filter-modal.scss
+++ b/assets/src/scss/pages/search/_filter-modal.scss
@@ -1,4 +1,9 @@
 .filter-modal {
+  @include medium-and-up {
+    .modal-dialog {
+      max-width: 90%;
+    }
+  }
   .modal-body {
     padding: $sp-3 $sp-2;
   }
